<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settings_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/settings"
            android:textColor="?attr/textColor"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/cardBackgroundColor">

                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/rating"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rating_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/rating_text">

                    <RadioButton
                        android:id="@+id/g_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:checked="true"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="@string/rating_g"
                        android:lineSpacingMultiplier="0.75"
                        android:textColor="?attr/textColor" />

                    <RadioButton
                        android:id="@+id/pg_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="-10dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="@string/rating_pg"
                        android:lineSpacingMultiplier="0.75"
                        android:textColor="?attr/textColor" />

                    <RadioButton
                        android:id="@+id/pg13_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="-10dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="@string/rating_pg13"
                        android:lineSpacingMultiplier="0.75"
                        android:textColor="?attr/textColor" />

                    <RadioButton
                        android:id="@+id/r_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="7dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="@string/rating_r"
                        android:lineSpacingMultiplier="0.75"
                        android:textColor="?attr/textColor" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/cardBackgroundColor">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:layoutDirection="rtl"
                    android:text="?attr/switchText"
                    android:textColor="?attr/textColor"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_text"
                    app:track="@drawable/track" />

                <TextView
                    android:id="@+id/switch_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/night"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>